Added livereload webserver and SCSS compilation

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-  <title>Babel Test</title>
+  <title>Modern JS Template Project - Lucas Werner</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <h2>Testing ES6 + Babel</h2>
-  <b>Name :</b>
-  <span id="nameSpan"></span>
+  <h2>Modern JS Template Project</h2>
+
   <script src="js/bundle.js"></script>
 </body>
 
